--- a/wp-content/themes/the-tomorrow/_/lib/scss/reset.scss
+++ b/wp-content/themes/the-tomorrow/_/lib/scss/reset.scss
@@ -79,6 +79,8 @@ table {font-size: inherit; font: 100%;}
 	people.opera.com/patrickl/experiments/keyboard/test */
 a:hover, a:active {outline: none;}
 
+textarea:focus, input:focus{ outline: 0; }
+
 small {font-size: 85%;}
 
 strong, th {font-weight: bold;}
