--- a/wp-content/themes/the-tomorrow/_/lib/scss/style.scss
+++ b/wp-content/themes/the-tomorrow/_/lib/scss/style.scss
@@ -76,7 +76,7 @@ a, a:hover {text-decoration:none;}
 body{ background: #F4F4F0;
   &.home, &.search { background: #fff; }
   #content {
-    margin-top: 140px; @include transition(all 0.5s ease); position: relative; z-index: 1;
+    margin-top: 140px; position: relative; z-index: 1; // @include transition(all 0.5s ease); 
 //  position: relative; width: 100%; margin: 0; text-align: left; padding: 80px 0 0 0;
     h2.no-content{ font-family: "adelle-sans"; font-weight: 300; font-size: 16px; height: 80px; line-height: 80px; border-bottom: 1px solid #ccc; }
   }  
@@ -95,7 +95,7 @@ body{ background: #F4F4F0;
 ************************************************/
 
 header.main{
-  @include transition(all 0.2s ease);
+//  @include transition(all 0.2s ease);
   form#search_venues_map{ display: none; }
   height: 140px; text-align: left; position:fixed; background: #fff; color: #fff; text-align: center; top: 0; left: 0; z-index: 9; width: 100%;
   
@@ -471,10 +471,10 @@ body.internal-page{
 
     }
 
-    #rightcol{ width: 220px; margin: 0; float: right;
-      &.fixed{ position: fixed; top: 100px; left: 50%; margin-left: 274px;
-        &.relative { position: relative; top: 0; left: 0; margin-left: 0; }
-      }
+    #rightcol{ width: 220px; margin: 0; float: right; position: relative; // z-index: 1;
+//    &.fixed{ position: fixed; top: 100px; left: 50%; margin-left: 274px;
+//      &.relative { position: relative; top: 0; left: 0; margin-left: 0; }
+//    }
 
       .li { border-top: 1px solid $primary-border-color; width: 220px; float: left;
         a{ color: #191919; text-indent: 10px; padding: 20px 0; text-transform: uppercase; font-size: 14px; display: block; margin-right: 10px; background-position: center right; background-repeat: no-repeat; }
@@ -580,6 +580,14 @@ body.internal-page{
   &.single-conversations{
     h2{ border-top: 1px solid $primary-border-color; }
     #content {
+      &.scrolled_conversation {
+        #rightcol { position: fixed; left: 50%; margin-left: 274px; }
+        .content_col{  }
+        .title_wrap{ background: #fff; position: fixed; top: 90px; left: 0; width: 100%; text-align: center; z-index: 1;
+          h2 { width: 732px; margin: 0 auto; text-align: left; position: relative; left: -128px; // padding-bottom: 10px;
+          }
+        }
+      }
       p.count-theme { text-transform: uppercase; font-size: 14px; margin-bottom: 30px; }
       .content_col{ width: 732px; /* border-top: 1px solid $primary-border-color; */
         article{ margin-bottom: 1px; @include transition(all 1s ease); overflow: hidden; height: auto;
@@ -588,6 +596,7 @@ body.internal-page{
           &.closed { 
             .entry, .comments { display: none; }
             .meta { background: $primary-color; color: #F4F4F0;
+              &:hover { background: #333; }
               h3 strong.id { border-right: 1px solid #F4F4F0; }
             }
           }
@@ -753,7 +762,7 @@ body.home footer, body.search footer { display: none; }
 // .push { height: 176px; }
 footer { 
   &.sticky { position: fixed; left: 0; bottom: 0; width: 100%;  }
-  height: 176px; background: #606A70; text-align: center; color: #fff; padding: 35px 0 45px 0; margin: 35px 0 0 0; position: relative; z-index: 2; @include transition(all 0.5s ease);
+  height: 176px; background: #606A70; text-align: center; color: #fff; padding: 35px 0 45px 0; margin: 35px 0 0 0; position: relative; z-index: 2; // @include transition(all 0.5s ease);
   .bottom {
     width: 100%; margin: 0 auto; text-align: left; clear: both; display: block; border-top: 1px solid #fff; padding: 10px 0 0 0;
     p.address, p.disclaimer { height: 16px; line-height: 16px; }
